<resources>
    <string name="app_name">CoinCap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Coin Cap</string>
    <string name="nav_header_subtitle">Coin.Cap@world.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_assets">Assets</string>
    <string name="menu_rates">Rates</string>
    <string name="menu_exchanges">Exchanges</string>
    <string name="menu_markets">Markets</string>
    <string name="id">ID</string>
    <string name="id1">ID</string>
    <string name="symbol">SYMBOL</string>
    <string name="currency_symbol1">CURRENCY SYMBOL</string>
    <string name="ExchangeId">EXCHANGE ID</string>
    <string name="quoteSymbol">QUOTE SYMBOL</string>
    <string name="updated">UPDATED</string>
    <string name="BaseId">BASE ID</string>
</resources>