<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_assets"
            android:icon="@drawable/account_balance_fill0_wght400_grad0_opsz48"
            android:title="@string/menu_assets" />
        <item
            android:id="@+id/nav_rates"
            android:icon="@drawable/currency_pound_fill0_wght400_grad0_opsz48"
            android:title="@string/menu_rates" />
        <item
            android:id="@+id/nav_exchanges"
            android:icon="@drawable/currency_exchange_fill0_wght400_grad0_opsz48"
            android:title="@string/menu_exchanges" />
        <item
            android:id="@+id/nav_markets"
            android:icon="@drawable/store_fill0_wght400_grad0_opsz48"
            android:title="@string/menu_markets" />
    </group>
</menu>